[project]
name = "acapy-minimal-example-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "acapy-controller[models]>=0.1.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "black>=24.3.0",
    "ruff>=0.3.6",
]
